--- a/estilos/style.css
+++ b/estilos/style.css
@@ -23,6 +23,105 @@
 
 }
 
+*{ 
+    margin: 0px;
+    padding: 0px;
+}
+
+table{
+    border-collapse: collapse;
+    background-color: aliceblue;
+    
+   
+    
+}
+thead{
+    border: 2px solid var(--cor2);
+    padding: 10px;
+    text-align: center;
+    font-weight: bold;
+    
+
+}
+th{
+    background: white;
+    color:var(black);
+    border: 2px solid var(--cor4);
+    padding: 10px;
+    text-align: center;
+    font-weight: bold;
+
+}
+
+td{
+    border: 2px solid var(--cor4);
+    color:var(--cor3);
+    font-weight: bold;
+    padding: 10px;
+    text-align: center;
+    
+}
+
+thead > tr > th {
+    position: sticky;
+    top: -1px;
+    
+}
+
+body, html{
+    background-color: var(--cor2);
+}
+
+header{
+    background-image: linear-gradient(to left, var(--cor3), transparent);
+}
+header > h1{
+    color: white;
+    font-family: var(--fonte-destaque);
+    font-size: 1em;
+    margin: 5px 10px;
+    padding: 2px;
+    text-align: center;
+}
+
+header > p{
+    font-family: var(--fonte-estilo);
+    background-color: white;
+    border-radius: 35px 2px;
+    padding: 20px;
+    text-align: center;
+    font-weight: bold;
+}
+
+menu{
+    background-color: var(--cor5);
+    text-decoration: none;
+    color: white;
+    padding: 10px;
+    box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.192);
+    border-top-right-radius: 21px;
+    border-bottom-left-radius: 21px;
+    
+}
+
+menu > a{
+    padding: 10px;
+    border-radius: 5px;
+    font-weight: bold;
+    transition-duration: .5;
+    
+}
+
+a{
+    text-decoration: none;
+    color: black;
+   
+}
+
+menu a:hover{
+    background-color: var(--cor3);
+    color: var(--cor5);
+}
 
 
 
