--- a/estilos/style.css
+++ b/estilos/style.css
@@ -76,7 +76,7 @@ header{
     background-image: linear-gradient(to left, var(--cor1), transparent);
 }
 header > h1{
-    color: ;
+    color: black ;
     font-family: var(--fonte-destaque);
     font-size: 2.2em; 
     margin: 19px;
@@ -125,7 +125,73 @@ menu a:hover{
     color: whitesmoke;
 }
 
+#burguer{
+    background-color:var(--cor4) ;
+    color:var(--cor3);
+    display: block;
+    text-align: center ;
+    padding: 2px ;
+    cursor: pointer;
+}
 
+#burguer.hover{
+    background-color: var(--cor3);
+    color: whitesmoke;
+}
+
+menu{
+    display: none;
+}
+menu > ul{
+    list-style-type: none;
+}
+
+menu > ul > li > a{
+    background-color:var(--cor4) ;
+    display: block;
+    text-decoration: none;
+    text-align: center;
+    padding: 9px;
+    border: 1px solid brown;
+}
+
+
+
+main{
+    min: width 300px; ;
+    max-width: 1050px ;
+    margin: auto ;
+    margin-top: 8px;
+    padding: 9px;
+    border-radius: 10px ;
+}
+
+article > h2{
+    background-image: linear-gradient(to top, var(--cor3), transparent);
+    font-family: var(--fonte-destaque);
+    padding-bottom: 8px;
+    text-align: center;
+    color: black;
+}
+
+article > p{
+    text-align: justify;
+    margin-bottom: 8px;
+    text-indent: 30px;
+    font-size: 1.2em;
+    line-height: 2em;
+
+}
+
+article a{
+    text-decoration: none ;
+    color: rgb(73, 18, 18);
+    font-size: 1.2em;
+}
+article > a:hover{
+    background-color: var(--cor3);
+    color: whitesmoke;
+}
 
 
 
