--- a/estilos/style.css
+++ b/estilos/style.css
@@ -239,6 +239,13 @@ main strong{
     
 }
 
+.imagem{
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    background-position: bottom;
+}
+
 
 
 
