--- a/estilos/style.css
+++ b/estilos/style.css
@@ -2,8 +2,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap');
 @font-face{
-    font-family: 'Beba Neue';
-    src: url('../fontes/BebasNeue-Regular.otf');
+    font-family: 'Please';
+    src: url('../fontes/Please\ write\ me\ a\ song.ttf');
    
 }
 
@@ -17,7 +17,7 @@
 
     --fonte-universal: 'Times New Roman', Times, serif;
     --fonte-destaque: 'Dan Serif Display', cursive;
-    --fonte-padrao: 'Beba Neue', cursive;
+    --fonte-padrao: 'Please', cursive;
 
 
 
@@ -187,10 +187,12 @@ main{
 
 article > h2{
     background-color: var(--cor3);
-    font-family: var(--fonte-destaque);
+    font-family: var(--fonte-padrao);
     padding-bottom: 2px;
     text-align: center;
     color: brown;
+    font-size: 2em;
+    font-weight: bold;
 }
 
 article > p{
